--- a/index.html
+++ b/index.html
@@ -80,39 +80,24 @@
       <!-- bloc-0 END -->
 
       <!-- bloc-1-presentation -->
-      <div
-        class="
-          bloc
-          bgc-dark-slate-blue
-          bg-banniere
-          d-bloc
-          bg-t-edge
-          bloc-bg-texture
-          b-parallax
-        "
-        id="bloc-1-hero"
-      >
-        <div class="container bloc-lg">
-          <div class="row tight-width-whitespace black-background">
-            <div class="col-sm-12">
-              <img src="img/logo.png"
-                class="center-block image-resize-mode"
-                width="100"
-                alt="Logo de la chouette agence, une Chouette stylisée sur fond noir"
-              />
-              <h1 class="text-center hero-bloc-text tc-white">
-                La chouette agence
-              </h1>
-              <div class="text-center">
-                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+      <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+			id="bloc-1-hero">
+			<div class="container bloc-lg">
+				<div class="row tight-width-whitespace">
+					<div class="col-sm-12">
+						<img src="img/logo.png" class="center-block image-resize-mode" 
+						width="100" alt="" />
+						<h1 class="text-center hero-bloc-text tc-white ">
+							La chouette agence.
+						</h1>
+						<div class="text-center">
+							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-      </div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
       <!-- bloc-1-presentation END -->
 
       <!-- bloc-2-services -->
@@ -120,254 +105,185 @@
         <div class="container bloc-md">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <h2>
-                La Chouette agence est une
-                agence de web design basé à Lyon qui aide les
-                entreprises à devenir attractives et visibles sur Internet.
-              </h2>
+              <h2>La chouette agence est une agence de web design qui
+                 aide les entreprises à devenir
+                attractives et visibles sur Internet.</h2>
             </div>
           </div>
           <div class="row voffset-lg med-width-whitespace">
             <div class="col-sm-4">
-              <div class="text-center">
-                <span
-                  class="
-                    et-icon-browser
-                    sm-shadow
-                    icon-dark-slate-blue
-                    icons
-                    icon-lg
-                  "
-                ></span>
+              <div aria-hidden="true" class="text-center">
+                <span class="et-icon-browser sm-shadow
+                 icon-dark-slate-blue icons icon-lg"></span>
               </div>
-              <h3 class="mg-md text-center">Web design</h3>
-              <p class="text-center pText">
-                Que vous ayez un site web qui a besoin d'un rafraîchissement ou
-                que vous partiez de zéro, laissez-nous vous réaliser un
-                design dont vous serez fier.
+              <h3 class="mg-md text-center">
+                Web design
+              </h3>
+              <p class="text-center ">
+                Que vous ayez un site web qui a besoin
+                 d&rsquo;un rafraîchissement ou que vous partiez de
+                zéro, laissez-nous vous réaliser un design dont vous serez fier.
               </p>
             </div>
             <div class="col-sm-4">
-              <div class="text-center">
-                <span
-                  class="
-                    et-icon-presentation
-                    sm-shadow
-                    icon-dark-slate-blue
-                    icons
-                    icon-lg
-                  "
-                ></span>
+              <div aria-hidden="true" class="text-center">
+                <span class="et-icon-presentation 
+                sm-shadow icon-dark-slate-blue icons icon-lg"></span>
               </div>
-              <h3 class="mg-md text-center">Stratégie</h3>
-              <p class="text-center pText">
-                Plutôt que de suggérer des <strong>designs</strong> à la mode,
-                nous travaillerons avec vous pour comprendre vos objectifs
-                commerciaux afin de vous proposer le meilleur
-                <strong>design</strong> possible.<br />
+              <h3 class="mg-md text-center">
+                &nbsp;Stratégie
+              </h3>
+              <p class="text-center ">
+                Plutôt que de suggérer des designs à
+                 la mode, nous travaillerons avec vous pour comprendre
+                vos objectifs commerciaux afin de vous
+                 proposer le meilleur design possible.<br>
               </p>
             </div>
             <div class="col-sm-4">
-              <div class="text-center">
-                <span
-                  class="
-                    et-icon-edit
-                    sm-shadow
-                    icon-dark-slate-blue
-                    icons
-                    icon-lg
-                  "
-                ></span>
+              <div aria-hidden="true" class="text-center">
+                <span class="et-icon-edit sm-shadow 
+                icon-dark-slate-blue icons icon-lg"></span>
               </div>
-              <h3 class="mg-md text-center">Illustrations</h3>
-              <p class="text-center pText">
-                Un bon <strong>web design</strong> n'est rien sans de bonnes
-                illustrations. Laissez faire notre équipe de
-                <strong>graphistes</strong> talentueux pour donner à vos pages
-                une touche finale d'élégance.
+              <h3 class="mg-md text-center">
+                Illustrations
+              </h3>
+              <p class="text-center ">
+                Un bon design n'est rien sans de bonnes
+                 illustrations. Laissez faire notre équipe de
+                graphistes talentueux pour donner à vos
+                 pages une touche finale d'élégance.
               </p>
             </div>
           </div>
           <div class="row voffset-lg voffset">
-            <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <h2>
-                "<strong>La Chouette agence</strong> est une
-                <strong>excellente agence web</strong> ! Les web designers ont
-                réussi à capturer l'essence de notre entreprise et à l'intégrer
-                à notre site. Celà nous a aidé à doubler nos ventes en ligne à
-                Lyon."
-              </h2>
-              <p class="pText">Maxime Guibard, PDG de A vos fourchettes</p>
-            </div>
+            <figure class="col-xs-12 col-md-8 col-md-offset-2 text-center">
+              <blockquote>
+                <p>La chouette agence est une excellente 
+                  agence web ! Les web designers ont réussi à
+                  capturer l'essence de notre entreprise et à 
+                  l'intégrer à notre site. Cela nous a aidé à
+                  doubler nos ventes en ligne à Lyon.</p>
+              </blockquote>
+              <figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>
+            </figure>
           </div>
         </div>
       </div>
       <!-- bloc-2-services END -->
 
       <!-- bloc-3-what-i-do -->
-      <div
-        class="
-          bloc
-          tc-white
-          bgc-atomic-tangerine
-          bg-presentation
-          d-bloc
-          bloc-bg-texture
-          b-parallax
-        "
-        id="bloc-3-what-i-do"
-      >
-        <div class="container bloc-lg">
-          <div class="row tight-width-whitespace black-background">
-            <div class="col-sm-12">
-              <h2 class="mg-md text-center tc-white">
-                Nous souhaitons aider les
-                <strong>entreprises de la région Lyonnaise</strong> à se
-                développer et à connaître le succès. Nous travaillons pour aider
-                les entreprises locales à attirer de nouveaux clients .<br />
-              </h2>
-              <p class="text-center white pText">
-                Nous aimons collaborer avec des entrepreneurs créatifs et des
-                entreprises locale, qu’elles aient besoin de créer un site de A
-                à Z ou de donner un coup de jeune à leur site. Que vous ayez
-                besoin d’une identité visuelle complète ou d’une refonte de
-                votre site, n’hésitez pas à nous contacter. Nous travaillerons
-                ensemble pour créer des sites beau et bien structurés, qui
-                seront facilement trouvable sur les moteurs de recherche.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="bloc tc-white bgc-atomic-tangerine bg-presentation
+       d-bloc bloc-bg-texture texture-paper b-parallax"
+			id="bloc-3-what-i-do">
+			<div class="container bloc-lg">
+				<div class="row tight-width-whitespace black-background">
+					<div class="col-sm-12">
+						<h2 class="mg-md text-center tc-white">
+							Nous souhaitons aider les entreprises de la région
+               Lyonnaise à se développer et à connaître
+							le succès. Nous travaillons pour aider les entreprises 
+              locales à attirer de nouveaux clients
+							.<br>
+						</h2>
+						<p class="text-center white">
+							Nous aimons collaborer avec des entrepreneurs
+               créatifs et des entreprises locale, qu’elles
+							aient besoin de créer un site de A à Z ou de donner un coup
+               de jeune à leur site. Que vous
+							ayez besoin d’une identité visuelle complète ou d’une refonte de 
+              votre site, n’hésitez pas à
+							nous contacter. Nous travaillerons ensemble pour créer des 
+              sites beau et bien structurés,
+							qui seront facilement trouvable sur
+               les moteurs de recherche. <br><br><a
+								class="ltc-white bold-link" href="contact.html">
+                Contactez notre équipe</a><br>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
       <!-- bloc-3-what-i-do END -->
 
       <!-- bloc-4-portfolio -->
-      <div
-        class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc"
-        id="bloc-4-portfolio"
-      >
+      <div class="bloc bgc-white bg-repeat l-bloc" id="bloc-4-portfolio">
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12 text-center">
-              <h2>
-                Nous travaillons avec beaucoup de clients, voici nos
-                réalisations.
-              </h2>
+              <h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
             </div>
           </div>
-
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/1.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Refonte d'un site web pour un journal local"
-                data-frame="snapshot-lb"
-                ><div class="img-frame">
-                  <img
-                    src="img/1.webp"
-                    alt="Des livres"
-                    class="img-responsive center-block portfolio-thumb"
-                  /></div
-              ></a>
+              <a href="#" aria-hidden="true" tabindex="-1" data-lightbox="img/1.webp"
+                data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local"
+                data-frame="snapshot-lb">
+                <img alt="" src="img/1.webp" class="img-responsive portfolio-thumb" /></a>
               <h3 class="mg-md text-center">
-                <strong>Refonte d'un site web</strong> pour un journal local
+                Refonte d'un site web pour un journal local
               </h3>
-              <p class="text-center pText">
-                Nous avons créé une nouvelle identité visuelle pour un journal
-                lyonnais.
+              <p class="text-center">
+                Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
               </p>
             </div>
             <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/2.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Création d'un site web pour photographes"
-                data-frame="snapshot-lb"
-                ><img
-                  src="img/2.webp"
-                  class="img-responsive center-block portfolio-thumb"
-                  alt="Une femme en train d'utiliser un appareil photo de haute qualité"
-              /></a>
+              <a href="#" aria-hidden="true" tabindex="-1" data-lightbox="img/2.webp"
+                data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes"
+                data-frame="snapshot-lb">
+                <img alt="" src="img/2.webp" class="img-responsive portfolio-thumb" /></a>
               <h3 class="mg-md text-center">
-                <strong>Création d'un site web</strong> pour photographes
+                Création d'un site web pour photographes
               </h3>
-              <p class="text-center pText">
-                Nous avons conçu la plateforme idéale pour laisser place aux
-                clichés des photographes.
+              <p class="text-center">
+                Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
               </p>
             </div>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/3.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Création d'un site internet pour un voyageur"
-                data-frame="snapshot-lb"
-                ><img
-                  src="img/3.webp"
-                  class="img-responsive center-block portfolio-thumb"
-                  alt="Matériel pour l'audio-visuel, objectifs d'appareil photo, micro, drone, etc..."
-              /></a>
+              <a href="#" aria-hidden="true" tabindex="-1" data-lightbox="img/3.webp"
+                data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur"
+                data-frame="snapshot-lb">
+                <img alt="" src="img/3.webp" class="img-responsive portfolio-thumb" /></a>
               <h3 class="mg-md text-center">
-                <strong>Création d'un site internet</strong> pour un voyageur
+                Création d'un site internet pour un voyageur
               </h3>
-              <p class="text-center pText">
-                Nous avons élaboré un <strong>site internet</strong> et des
-                illustrations pour sublimer les vidéos et les articles de ce
-                voyageur.
+              <p class="text-center">
+                Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
+                articles de ce voyageur.
               </p>
             </div>
             <div class="col-sm-6">
-              <a
-                href="#"
-                data-lightbox="img/4.webp"
-                data-gallery-id="gallery-1"
-                data-caption="Conception d'un site pour une agence de mariage"
-                data-frame="snapshot-lb"
-                ><img
-                  src="img/4.webp"
-                  class="img-responsive center-block portfolio-thumb"
-                  alt="Un bureau avec du matériel de petit bricolage, ciseaux, rubans"
-              /></a>
+              <a href="#" aria-hidden="true" tabindex="-1" data-lightbox="img/4.webp"
+                data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage"
+                data-frame="snapshot-lb">
+                <img alt="" src="img/4.webp" class="img-responsive portfolio-thumb" /></a>
               <h3 class="mg-md text-center">
-                <strong>Conception d'un site</strong> pour une agence de mariage
+                Conception d'un site pour une agence de mariage
               </h3>
-              <p class="text-center pText">
-                Nous avons travaillé avec cette agence pour
-                <strong>créer un site internet</strong> permettant la
+              <p class="text-center">
+                Nous avons travaillé avec cette agence pour créer un site internet permettant la
                 présentation détaillée de leurs prestations.
               </p>
             </div>
           </div>
         </div>
       </div>
-      <!-- bloc-4-portfolio END -->
+       <!-- bloc-4-portfolio END -->
 
       <!-- bloc-5-cta -->
-      <div
-        class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture"
-        id="bloc-5-cta"
-      >
+      <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
         <div class="container bloc-lg">
-          <div class="row black-background">
-            <h2 class="mg-md text-center tc-white">
-              Prêt pour redonner vie à votre projet ?<br />Contactez notre
-              équipe !
-            </h2>
-            <div class="col-sm-12 text-center">
-              <a
-                href="contact.html"
-                class="
-                  btn btn-atomic-tangerine btn-clean btn-rd btn-lg
-                  cta-hero
-                "
-                >Contact</a
-              >
+          <div class="row">
+            <div class="col-sm-12">
+              <h2 class="mg-md text-center tc-white">
+                Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+              </h2>
+              <div class="col-sm-12 text-center">
+                <a href="contact.html"
+                  class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+              </div>
             </div>
           </div>
         </div>
